2005-03-29  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): New stubs.
	(build_field_reference): Likewise.
	* abi.hh (gcj_abi::build_method_call): Declare new overload.
	(gcj_abi::build_field_reference): Likewise.
	(cxx_abi::build_method_call): Declare.
	(cxx_abi::build_field_reference): Likewise.
	(bc_abi::build_method_call): Declare.
	(bc_abi::build_field_reference): Likewise.
	* builtins.cc (map_method_call): New method.
	(map_field_ref): Wrote.
	* builtins.hh (tree_builtins::map_method_call): Declare new
	overload.
	* lower.cc (visit_bytecode_block): Handle invoke_* opcodes.  Set
	TREE_SIDE_EFFECTS in more places.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use add_temporary.
	* tree.hh (tree_generator::add_temporary): Declare.
	* tree.cc (add_temporary): New method.
	(visit_for_enhanced): Wrote.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::array_access): Updated.
	(tree_generator::array_store): Likewise.
	* lower.cc (array_access): Added 'mtype' argument.
	(array_store): Likewise.
	(visit_bytecode_block): Updated.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_cast): Handle boxing and unboxing.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block) <op_swap>: Finish set-up of new
	variable.
	(visit_bytecode_block) <op_new>: Added casts.
	(visit_bytecode_block): Use convert, not CONVERT_EXPR.
	(handle_convert): Likewise.
	(visit_bytecode_block): Use convert, not NOP_EXPR.
	(handle_return): Likewise.
	(slot_type): Removed.
	(handle_convert): Rewrote how min and max are computed.
	(visit_bytecode_block): Indentation fixes.
	(push): Use type_object_ptr.
	(cast): Use 'convert'.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use VERIFY_BRANCH_TARGET.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Set DECL_CONTEXT on stack and